<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menuHome"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            android:orderInCategory="100"
            />

        <item
            android:id="@+id/menuProfile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_person_outline"
            android:orderInCategory="100"
            />

        <item
            android:id="@+id/menuFavourite"
            android:title="@string/favourite_restaurants"
            android:icon="@drawable/ic_favourite_outline"
            android:orderInCategory="100"
            />

        <item
            android:id="@+id/menuOrderHistory"
            android:title="@string/order_history"
            android:icon="@drawable/ic_history"
            android:orderInCategory="100"
            />

        <item
            android:id="@+id/menuFAQs"
            android:title="FAQs"
            android:icon="@drawable/ic_help"
            android:orderInCategory="100"
            />

        <item
            android:id="@+id/menuLogOut"
            android:title="Log Out"
            android:icon="@drawable/ic_logout"
            android:orderInCategory="100"
            />




    </group>

</menu>