<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".fragment.LoginFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/chef"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInLogin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="15dp">

        <EditText
            android:id="@+id/etMobNoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/mobile_number_10digits"
            android:padding="7dp"
            android:maxLines="1"
            android:inputType="number"
            android:maxLength="10"
            android:drawableLeft="@drawable/ic_mobile"
            android:drawablePadding="5dp"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInLogin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardInLogin1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="15dp">

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:padding="7dp"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInLogin3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardInLogin2"
        android:layout_marginLeft="15dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="5dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardInLogin3"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtRegisterInLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>