<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/singleRowMenu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="10"
    android:orientation="horizontal"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtSrNo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:text="@string/sampleText0"
        android:gravity="center"
        android:textSize="13sp"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="6">
        
        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sampleText"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/txtItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sampleText2"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:layout_below="@id/txtItemName"/>
        
    </RelativeLayout>

    <androidx.cardview.widget.CardView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        >

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Add"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>