<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustResize"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbarRegister"
                layout="@layout/toolbar" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="48dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="5dp"
                android:hint="@string/name_min_3_characters"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etMobileNumberRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="5dp"
                android:hint="@string/mobile_number_10_digits"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etDeliveryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="5dp"
                android:hint="@string/delivery_address"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword1Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:hint="@string/password_min_4_characters"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword2Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>