<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".fragment.ProfileFragment">

    <ImageView
        android:id="@+id/imgPersonProfile"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/profile_icon"
        android:scaleType="fitXY"
        android:layout_marginTop="30dp"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/txtProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="7dp"
            android:text="@string/person_s_name"
            android:textColor="@color/darkBlack"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/txtProfileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mobile_number"
            android:textSize="20sp"
            android:textColor="@color/darkBlack"
            android:padding="7dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/txtProfileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/email_address"
            android:textSize="20sp"
            android:textColor="@color/darkBlack"
            android:padding="7dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/txtProfileAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/place"
            android:textSize="20sp"
            android:textColor="@color/darkBlack"
            android:padding="7dp"/>
    </androidx.cardview.widget.CardView>



</LinearLayout>