<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MyCartFragment">

    <LinearLayout
        android:id="@+id/detailsTopSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/ordering_from"
            android:textSize="17sp"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtItemNameCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/mcdonald"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:id="@+id/LineDetailsCart"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/detailsTopSection"
        android:background="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_above="@id/btnPlaceOrder"
        android:layout_below="@id/LineDetailsCart" />

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/place_order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <ProgressBar
        android:id="@+id/progressBarCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:elevation="10dp"
        android:visibility="invisible"
        tools:targetApi="lollipop" />

</RelativeLayout>